--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Space Explorer</title>
+    <title>Mirosmar Santos</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,32 +13,32 @@
 <body>
     <div class="container">
         <header>
-            <img src="./universe.jpg" alt="Astronaut" class="profile-img">
-            <h1>Space Explorer</h1>
-            <p class="tagline">Exploring the universe, one star at a time.</p>
+            <img src="./profile.jpg" alt="Astronaut" class="profile-img">
+            <h1>Mirosmar Santos</h1>
+            <p class="tagline">Desenvolvedor Web</p>
         </header>
 
         <section class="links">
-            <a href="https://github.com/" class="link-box">
+            <a href="https://github.com/sudown" class="link-box">
                 <div class="link-content">
                     <img src="https://img.icons8.com/color/48/000000/github--v1.png" alt="GitHub Icon" class="icon">
-                    <span>My GitHub</span>
+                    <span>GitHub</span>
                 </div>
                 <div class="link-background"></div>
             </a>
 
-            <a href="https://twitter.com/" class="link-box">
+            <a href="https://steamcommunity.com/id/LinWithLau/" class="link-box">
                 <div class="link-content">
-                    <img src="https://img.icons8.com/color/48/000000/twitter--v1.png" alt="Twitter Icon" class="icon">
-                    <span>My Twitter</span>
+                    <img src="https://img.icons8.com/color/48/000000/steam--v1.png" alt="Steam Icon" class="icon">
+                    <span>Steam</span>
                 </div>
                 <div class="link-background"></div>
             </a>
 
-            <a href="https://linkedin.com/" class="link-box">
+            <a href="https://www.linkedin.com/in/mirosmar-santos-1a35b5263/" class="link-box">
                 <div class="link-content">
                     <img src="https://img.icons8.com/color/48/000000/linkedin.png" alt="LinkedIn Icon" class="icon">
-                    <span>My LinkedIn</span>
+                    <span>LinkedIn</span>
                 </div>
                 <div class="link-background"></div>
             </a>
