--- a/index.html
+++ b/index.html
@@ -1,52 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mirosmar Santos</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Space+Mono&display=swap" rel="stylesheet">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Space+Mono&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <div class="container">
-        <header>
-            <img src="./profile.jpg" alt="Astronaut" class="profile-img">
-            <h1>Mirosmar Santos</h1>
-            <p class="tagline">Desenvolvedor Web</p>
-        </header>
+      <header>
+        <img src="./profile.jpg" alt="Astronaut" class="profile-img" />
+        <h1>Mirosmar Santos</h1>
+        <p class="tagline">Desenvolvedor Web</p>
+      </header>
 
-        <section class="links">
-            <a href="https://github.com/sudown" class="link-box">
-                <div class="link-content">
-                    <img src="https://img.icons8.com/color/48/000000/github--v1.png" alt="GitHub Icon" class="icon">
-                    <span>GitHub</span>
-                </div>
-                <div class="link-background"></div>
-            </a>
+      <section class="links">
+        <a href="https://github.com/sudown" class="link-box">
+          <div class="link-content">
+            <img
+              src="https://img.icons8.com/color/48/000000/github--v1.png"
+              alt="GitHub Icon"
+              class="icon"
+            />
+            <span>GitHub</span>
+          </div>
+          <div class="link-background"></div>
+        </a>
 
-            <a href="https://steamcommunity.com/id/LinWithLau/" class="link-box">
-                <div class="link-content">
-                    <img src="https://img.icons8.com/color/48/000000/steam--v1.png" alt="Steam Icon" class="icon">
-                    <span>Steam</span>
-                </div>
-                <div class="link-background"></div>
-            </a>
+        <a href="https://www.instagram.com/mirosmar.santoss/" class="link-box">
+          <div class="link-content">
+            <img
+              src="https://img.icons8.com/color/48/000000/instagram--v1.png"
+              alt="Instagram"
+              class="icon"
+            />
+            <span>Instagram</span>
+          </div>
+          <div class="link-background"></div>
+        </a>
 
-            <a href="https://www.linkedin.com/in/mirosmar-santos-1a35b5263/" class="link-box">
-                <div class="link-content">
-                    <img src="https://img.icons8.com/color/48/000000/linkedin.png" alt="LinkedIn Icon" class="icon">
-                    <span>LinkedIn</span>
-                </div>
-                <div class="link-background"></div>
-            </a>
-        </section>
+        <a href="https://steamcommunity.com/id/LinWithLau/" class="link-box">
+          <div class="link-content">
+            <img
+              src="https://img.icons8.com/color/48/000000/steam--v1.png"
+              alt="Steam Icon"
+              class="icon"
+            />
+            <span>Steam</span>
+          </div>
+          <div class="link-background"></div>
+        </a>
 
-        <footer>
-            <p class="credits">Icons by <a href="https://icons8.com" target="_blank">Icons8</a></p>
-        </footer>
+        <a
+          href="https://www.linkedin.com/in/mirosmar-santos-1a35b5263/"
+          class="link-box"
+        >
+          <div class="link-content">
+            <img
+              src="https://img.icons8.com/color/48/000000/linkedin.png"
+              alt="LinkedIn Icon"
+              class="icon"
+            />
+            <span>LinkedIn</span>
+          </div>
+          <div class="link-background"></div>
+        </a>
+      </section>
     </div>
-</body>
+  </body>
 </html>
